src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n}"
expression: snapshot
---
initial configure:
size: 300 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
